started adding css anination

--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>free brisk</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <div class = "title">
-    <h1 class = "text-5xl font-bold font-sans overline">free brisk</h1>
+    <div class="title">
+      <h1 class="text-5xl font-bold font-sans overline">free brisk</h1>
     </div>
-    <div class = "nav">
-        <a href="#about">about</a>
-        <a href="#portfolio">portfolio</a>
-        <a href="#music">music</a>    
+    <div class="nav">
+      <a href="#about">about</a>
+      <a href="#portfolio">portfolio</a>
+      <a href="#music">music</a>
     </div>
-	<script src="app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
