added copyright at bottom left

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       <a href="#portfolio">portfolio</a>
       <a href="#music">music</a>
     </div>
+    <footer>
+      <p>© 2023 free brisk</p>
+    </footer>
     <script src="app.js"></script>
   </body>
 </html>
