--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>free brisk</title>
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="images/download.png" />
   </head>
   <body>
     <div class="title">
